--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -1,10 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin-ext');
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-// Global font
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin-ext');
+
 // Core variables and mixins
 @import "variables.less";
 @import "mixins.less";
@@ -35,7 +35,7 @@
 @import "pager.less";
 @import "labels.less";
 @import "badges.less";
-@import "jumbotron.less";
+//@import "jumbotron.less";
 @import "thumbnails.less";
 @import "alerts.less";
 @import "progress-bars.less";
