--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -4,9 +4,9 @@
 }
 
 .slick-slider {
-  @media (min-width: @screen-md-min) {
-    height: 289px; // KU
-  }
+  // @media (min-width: @screen-md-min) {
+  //   height: 289px; // KU
+  // }
   position: relative;
   display: block;
   box-sizing: border-box;
@@ -93,13 +93,14 @@
     max-width: 100%;
     height: auto;
     position: relative;
-    @media (min-width: @screen-md-min) {
-      max-width: none!important; // KU
-      width: 100%;
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%) translateX(0);
-    }
+    // @media (min-width: @screen-md-min) {
+    //   max-width: none!important; // KU
+    //   width: 100%;
+    //   //top: 50%;
+    //   top: 0;
+    //   left: 0;
+    //   //transform: translateY(-50%) translateX(0);
+    // }
   }
 
   &.slick-loading img {
