--- a/docs/assets/css/slider/slick-theme.css
+++ b/docs/assets/css/slider/slick-theme.css
@@ -56,7 +56,6 @@
   -ms-flex: 1 0 auto!important;
   flex: 1 0 auto!important;
 }
-
 /* Slider gallery end */
 
 /* Custom captions */
@@ -68,7 +67,9 @@
   line-height: 1.333333;
   z-index: 2;
   padding: 15px;
+  border: 1px solid #ddd;
 }
+
 .slick-slide:hover .caption {
   text-decoration: none;
 
@@ -128,11 +129,5 @@
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     width: 50%;
-  }
-  .slick-slider .caption {
-    height: auto;
-    background-color: rgba(255, 255, 255, .8);
-    position: absolute;
-    bottom: 0;
   }
 }
