--- a/docs/assets/css/slider/slick-theme.css
+++ b/docs/assets/css/slider/slick-theme.css
@@ -19,7 +19,8 @@
   cursor: pointer;
   top: auto;
   left: auto;
-  transform: none;
+  -webkit-transform: none;
+          transform: none;
 }
 
 .gallery-nav .slick-slide {
@@ -35,15 +36,12 @@
 .gallery-nav .slick-track {
   margin-left: -1px;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
@@ -52,15 +50,18 @@
   min-width: 50%!important;
   height: auto;
   -webkit-box-flex: 1!important;
-  -webkit-flex: 1 0 auto!important;
   -ms-flex: 1 0 auto!important;
   flex: 1 0 auto!important;
 }
 /* Slider gallery end */
 
 /* Custom captions */
-
 .slick-slide .caption {
+  display: none;
+}
+
+.slick-slide.slick-current .caption {
+  display: block;
   position: relative;
   width: 100%;
   color: #252525;
@@ -70,12 +71,12 @@
   border: 1px solid #ddd;
 }
 
-.slick-slide:hover .caption {
+.slick-slide.slick-current:hover .caption {
   text-decoration: none;
 
 }
 
-.slick-slide .caption h2 {
+.slick-slide.slick-current .caption h2 {
   margin-top: 0;
 }
 
@@ -90,7 +91,8 @@
   left: auto;
   right: 0;
   top: auto;
-  transform: translateY(0%);
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
   min-height: 70%;
   color: #fff;
   background: rgba(119, 172, 179, .8);
