--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -1972,14 +1972,14 @@
       }
 
       &:hover {
-        background: #e7e7e7!important;
-        border: 1px solid #e7e7e7;
+        background: @ku-gray-hover!important;
+        border: 1px solid @ku-gray-hover;
       }
 
       &.with-img {
         &:hover {
-          background: #e7e7e7!important;
-          border: 1px solid #e7e7e7;
+          background: @ku-gray-hover!important;
+          border: 1px solid @ku-gray-hover;
         }
       }
     }
@@ -1989,7 +1989,7 @@
       color: @ku-gridbox-text;
 
       &:hover {
-        background: #e7e7e7!important;
+        background: @ku-gray-hover!important;
       }
 
       .header {
@@ -1999,7 +1999,7 @@
 
     &.text-down {
       &:hover {
-        background: #e7e7e7!important;
+        background: @ku-gray-hover!important;
       }
     }
 
@@ -2342,7 +2342,7 @@
     }
 
     &:hover {
-      background: #e7e7e7;
+      background: @ku-gray-hover;
     }
   }
 
