--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -6,7 +6,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: @zindex-navbar-fixed;
+    z-index: @zindex-navbar-fixed !important;
     padding: @padding20;
     color: @white-color;
     .backgroundColorFix(lighten(@gray-light, 18%), .9);
