--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -61,7 +61,6 @@
             <li role="menuitem"><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
             <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
           </ul>
-
             <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
             <div class="social-items">
               <div class="social-item">
@@ -71,13 +70,16 @@
                 <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="icon icon-linkedin" title="LinkedIn"></a>
               </div>
               <div class="social-item">
+                <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="icon icon-instagram" title="Instagram"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
+              </div>
+              <div class="social-item">
                 <a target="_blank" href="http://velkommen.ku.dk/apps" class="icon icon-phone" title="KU Apps"></a>
               </div>
               <div class="social-item">
                 <a target="_blank" href="http://nyheder.ku.dk/rss/" class="icon icon-rss" title="RSS"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
               </div>
               <div class="social-item">
                 <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="icon icon-youtube" title="YouTube"></a>
