--- a/less/type.less
+++ b/less/type.less
@@ -217,16 +217,12 @@ mark {
 // Lists
 // -------------------------
 // Unordered and Ordered lists
-ol,
-ul {
+ul,
+ol {
   margin-top: 0;
   margin-bottom: (@line-height-computed / 2);
-  li {
-    margin: 2px 0;
-  }
-
-  ol,
-  ul {
+  ul,
+  ol {
     margin-bottom: 0;
   }
 }
