--- a/less/variables.less
+++ b/less/variables.less
@@ -68,7 +68,7 @@
 
 //== Typography
 //
-//## Global Google font is in bootstrap.less. 
+//## Global Google font is in bootstrap.less.
 
 @font-family-sans-serif:  "Open Sans", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
@@ -770,6 +770,8 @@
 @panel-bg:                    #fff;
 @panel-body-padding:          10px;
 @panel-heading-padding:       6px 10px;
+// KU specific
+@panel-bokstop-heading-padding: 6px 0;
 @panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
 
@@ -777,7 +779,7 @@
 @panel-inner-border:          #ddd;
 @panel-footer-bg:             #f5f5f5;
 
-@panel-default-header-text:   #5e5e5e;
+@panel-default-header-text:   #151515;
 @panel-default-text:          @gray-dark;
 @panel-default-border:        #d5d5d5;
 @panel-default-heading-bg:    #f5f5f5;
