--- a/docs/_includes/css/less.html
+++ b/docs/_includes/css/less.html
@@ -160,7 +160,7 @@ a {
   <p>Vendor mixins are mixins to help support multiple browsers by including all relevant vendor prefixes in your compiled CSS.</p>
 
 
-  <h3 id="less-mixins-box-sizing">Box-sizing</h3>
+  <!-- <h3 id="less-mixins-box-sizing">Box-sizing</h3>
   <p>Reset your components' box model with a single mixin. For context, see this <a href="https://developer.mozilla.org/en-US/docs/CSS/box-sizing" target="_blank">helpful article from Mozilla</a>.</p>
   <p>The mixin is <strong>deprecated</strong> as of v3.2.0, with the introduction of Autoprefixer. To preserve backwards-compatibility, Bootstrap will continue to use the mixin internally until Bootstrap v4.</p>
 {% highlight scss %}
@@ -169,7 +169,7 @@ a {
      -moz-box-sizing: @box-model; // Firefox <= 19
           box-sizing: @box-model;
 }
-{% endhighlight %}
+{% endhighlight %} -->
 
   <h3 id="less-mixins-rounded-corners">Rounded corners</h3>
   <p>Today all modern browsers support the non-prefixed <code>border-radius</code> property. As such, there is no <code>.border-radius()</code> mixin, but Bootstrap does include shortcuts for quickly rounding two corners on a particular side of an object.</p>
