--- a/less/mixins/vendor-prefixes.less
+++ b/less/mixins/vendor-prefixes.less
@@ -71,11 +71,11 @@
 }
 
 // Box sizing
-.box-sizing(@boxmodel) {
-  -webkit-box-sizing: @boxmodel;
-     -moz-box-sizing: @boxmodel;
-          box-sizing: @boxmodel;
-}
+// .box-sizing(@boxmodel) {
+//   -webkit-box-sizing: @boxmodel;
+//      -moz-box-sizing: @boxmodel;
+//           box-sizing: @boxmodel;
+// }
 
 // CSS3 Content Columns
 .content-columns(@column-count; @column-gap: @grid-gutter-width) {
