--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,7 +1,7 @@
 // KU privacy policy box
 @media (min-width: @screen-xs-max) {
   .privacy-policy {
-    display: none;  // remove when implemented
+    display: none;
     position: fixed;
     bottom: 0;
     right: 0;
