Added KU entry components

--- a/less/variables.less
+++ b/less/variables.less
@@ -12,6 +12,7 @@
 @gray-dark:              #252525;
 @gray:                   #ccc;
 @gray-light:             #777;
+@gray-666:               #666;
 @gray-lighter:           #eee;
 
 @white-color:            #fff;
@@ -40,6 +41,12 @@
 @jura-hover:            #85822c;
 @teol:                  #66609e;
 @teol-hover:            #565185;
+
+// KU gradients
+
+@ku-entry-start:        #f3f3f1;
+@ku-entry-end:          #edece9;
+@ku-entry-border:       #e8e8e8;
 
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
