--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -64,6 +64,7 @@
 @import "ku-footer.less";
 @import "ku-news.less";
 @import "ku-media.less";
+@import "ku-entries.less";
 //@import "ku-slickslider.less";
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
