--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -9,6 +9,7 @@
         <ul>
           <li><a href="../ku-default/">Template with left menu</a></li>
           <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
+          <li><a href="../ku-custom-elements/">Template with left menu and custom elements</a></li>
         </ul>
       </li>
       <li><a href="#">Special KU plug-ins</a>
