--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -6,65 +6,61 @@
   align-items: flex-start;
   border-bottom: 1px solid @ku-entry-border;
   padding-top: 1px;
-  @media only screen and (min-width: @screen-sm-min) {
+  border-top: 1px solid @ku-red;
+
+  .theme-samf & {
+    border-top: 1px solid @samf;
+  }
+
+  .theme-hum & {
+    border-top: 1px solid @hum;
+  }
+
+  .theme-science & {
+    border-top: 1px solid @science;
+  }
+
+  .theme-sund & {
+    border-top: 1px solid @sund;
+  }
+
+  .theme-jur & {
+    border-top: 1px solid @jura;
+  }
+
+  .theme-teo & {
+    border-top: 1px solid @teol;
+  }
+  .clearfix();
+  @media only screen and (min-width: @screen-md-min) {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    #gradient.vertical(@ku-entry-start; @ku-entry-end; 0%; 100%);
-    border-top: 1px solid @ku-red;
-
-    .theme-samf & {
-      border-top: 1px solid @samf;
-    }
-
-    .theme-hum & {
-      border-top: 1px solid @hum;
-    }
-
-    .theme-science & {
-      border-top: 1px solid @science;
-    }
-
-    .theme-sund & {
-      border-top: 1px solid @sund;
-    }
-
-    .theme-jur & {
-      border-top: 1px solid @jura;
-    }
-
-    .theme-teo & {
-      border-top: 1px solid @teol;
-    }
   }
 
   .entry {
     flex: 1 1 auto;
     text-align: left;
-    margin-top: 5px;
-    padding-left: 20px;
-    width: 100%;
-    #gradient.vertical(@ku-entry-start; @ku-entry-end; 0%; 100%);
-    @media only screen and (min-width: @screen-sm-min) {
-      padding: 10px 15px;
-    }
-    @media only screen and (min-width: @screen-xs-max) and (max-width: @screen-md-min) {
-      padding: 11px 5px;
-    }
     border-bottom: 1px solid @white-color;
-    text-align: center;
     position: relative;
+    margin-top: 5px;
+    padding: 10px 15px 10px 20px;
+    width: 100%;
     overflow: hidden;
+    #gradient.vertical(@ku-entry-start; @ku-entry-end; 0%; 100%);
+    @media only screen and (min-width: @screen-md-min) {
+      width: auto;
+      margin-top: 0;
+      padding: 10px 15px;
+      text-align: center;
+    }
 
     & > a {
-      display: inline-flex;
-      @media only screen and (min-width: @screen-sm-min) {
-        display: block;
+      display: block;
+      @media only screen and (min-width: @screen-md-min) {
+        display: inline-flex;
       }
       font-size: 15px;
-      @media only screen and (min-width: @screen-xs-max) and (max-width: @screen-md-min) {
-        font-size: 14px;
-      }
       padding-left: 18px;
       align-items: center;
       letter-spacing: 0.06em;
@@ -76,6 +72,14 @@
       color: @gray-666;
       white-space: nowrap;
       .icon-arrow;
+
+      &:hover {
+        text-decoration: underline;
+      }
+
+      &:visited {
+        color: @gray-666;
+      }
 
       &:before {
         font-size: 12px;
@@ -115,7 +119,7 @@
         }
       }
     }
-    @media only screen and (min-width: @screen-sm-min) {
+    @media only screen and (min-width: @screen-md-min) {
       &+.entry {
         &:after {
           content: '';
