--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2202,6 +2202,7 @@
         top: 50%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
+        filter: brightness(100%);
       }
     }
     // Position image left
