News and events

--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -9,7 +9,11 @@
         <ul>
           <li><a href="../ku-default/">Template with left menu</a></li>
           <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
-          <li><a href="../ku-custom-elements/">Template with left menu and custom elements</a></li>
+          <li><a href="../ku-custom-elements/">Template with left menu and custom elements</a>
+            <ul>
+              <li><a href="../ku-news-events/">News / events lists</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li><a href="#">Special KU plug-ins</a>
