--- a/less/panels.less
+++ b/less/panels.less
@@ -10,6 +10,9 @@
   //border-radius: @panel-border-radius;
   // KU: Panels with images
   &.with-img {
+    .panel-heading {
+      padding-bottom: 0;
+    }
     .panel-body {
       padding: 0;
       overflow: hidden;
