--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -46,7 +46,7 @@
     margin-top: 5px;
     padding: 10px 15px 10px 20px;
     width: 100%;
-    overflow: hidden;
+    //overflow: hidden;
     #gradient.vertical(@ku-entry-start; @ku-entry-end; 0%; 100%);
     @media only screen and (min-width: @screen-md-min) {
       width: auto;
