--- a/less/variables.less
+++ b/less/variables.less
@@ -48,6 +48,10 @@
 @ku-entry-end:          #edece9;
 @ku-entry-border:       #e8e8e8;
 
+// KU calendar code-color
+
+@ku-occupied-color:     #7f9a9a;
+
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
