--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -24,7 +24,7 @@
           <li><a href="../ku-datatables/">Template with data tables</a></li>
           <li><a href="../ku-formvalidation/">Template with form validation</a></li>
           <li><a href="../non-responsive/">Non responsive page</a></li>
-          <li class="active"><a href="#">Link 2.1</a>
+          <li><a href="#">Link 2.1</a>
             <ul>
               <li><a href="../ku-courses/">Kurser.ku.dk</a>
               <li><a href="../ku-course-details/">Kursus detaljeside</a></li>
