--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -84,7 +84,9 @@
   }
 
   .news-date2 {
+    font-size: 12px;
     line-height: @line-height-computed;
+    font-weight: 400;
   }
 
   .media-heading {
@@ -95,8 +97,4 @@
       font-size: 12px;
     }
   }
-}
-
-.news-teaser {
-  display: table-cell;
 }
