--- a/less/panels.less
+++ b/less/panels.less
@@ -12,6 +12,7 @@
   &.with-img {
     .panel-heading {
       padding-bottom: 0;
+      border-bottom: 0;
     }
     .panel-body {
       padding: 0;
