--- a/less/variables.less
+++ b/less/variables.less
@@ -50,7 +50,8 @@
 
 // KU calendar code-color
 
-@ku-occupied-color:     #7f9a9a;
+@ku-occupied-color:     #88a6a6;
+@ku-occupied-color-hover: #7f9a9a;
 
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
@@ -828,11 +829,11 @@
 //##
 
 //** Padding around the thumbnail image
-@thumbnail-padding:           4px;
+@thumbnail-padding:           2px;
 //** Thumbnail background color
 @thumbnail-bg:                @body-bg;
 //** Thumbnail border color
-@thumbnail-border:            #ddd;
+@thumbnail-border:            #929292;
 //** Thumbnail border radius
 @thumbnail-border-radius:     @border-radius-base;
 
