--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -129,22 +129,53 @@
     tr {
       td,
       th {
-        text-align: center;
-        width: 30px;
-        height: 30px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 28px;
+        height: 28px;
         border: none;
       }
     }
 
     thead {
       tr {
-        border-bottom: 1px solid @panel-default-border;
+        //border-bottom: 1px solid @panel-default-border;
       }
 
       tr:nth-child(2) {
         // KU: Month and arrows
-        #gradient > .vertical-three-colors(#eee; #e8e8e6; 50%; #f1f1f1);
+        font-size: 17px;
+        line-height: 1.34;
         color: @panel-default-header-text;
+        font-weight: 600;
+        letter-spacing: 0.25px;
+        min-height: 16px;
+        padding: 6px 0;
+        border-bottom: 1px solid #901a1e;
+        .theme-samf & {
+          border-bottom: 1px solid @samf;
+        }
+
+        .theme-hum & {
+          border-bottom: 1px solid @hum;
+        }
+
+        .theme-science & {
+          border-bottom: 1px solid @science;
+        }
+
+        .theme-sund & {
+          border-bottom: 1px solid @sund;
+        }
+
+        .theme-jur & {
+          border-bottom: 1px solid @jura;
+        }
+
+        .theme-teo & {
+          border-bottom: 1px solid @teol;
+        }
       }
 
       tr:nth-child(3) {
@@ -156,7 +187,7 @@
     &.table-striped {
       &:extend(.table-striped);
 
-      > tbody > tr:nth-of-type(even) {
+      > tbody > tr:nth-of-type(odd) {
         background-color: darken(@gray-lighter, 5%);
       }
     }
@@ -182,11 +213,19 @@
 
   .day {
     cursor: pointer;
+    span {
+      a {
+        color: @text-color;
+      }
+    }
     &.occup_monthday {
       span {
         background: @ku-occupied-color;
         a {
           color: @white-color;
+        }
+        &:hover {
+          background: @ku-occupied-color-hover;
         }
       }
     }
