--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -187,7 +187,7 @@
     &.table-striped {
       &:extend(.table-striped);
 
-      > tbody > tr:nth-of-type(odd) {
+      > tbody > tr:nth-of-type(even) {
         background-color: darken(@gray-lighter, 5%);
       }
     }
