--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -139,8 +139,7 @@
 // Only use under development - set active left menu item
 $(function(){
     var current = location.pathname;
-    console.log(current);
-    $('#leftmenu li a').each(function(){
+    $('.ku-docs #leftmenu li a').each(function(){
         var $this = $(this);
         // if the current path is like this link, make it active
         if($this.attr('href').replace('..', '/examples').indexOf(current) !== -1){
