--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -3,7 +3,7 @@
   <head>
     {% include header.html %}
   </head>
-  <body>
+  <body {% if site.github %}{% else %}class="ku-docs"{% endif %}>
     <nav class="jumpbox" aria-label="Spring til indhold på Siden" title="Spring til Indhold på Siden">
       <ul class="jump">
         <li>
