--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -50,7 +50,7 @@
 @import "modals.less";
 @import "tooltip.less";
 @import "popovers.less";
-@import "carousel.less";
+//@import "carousel.less";
 
 // Utility classes
 @import "utilities.less";
