--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -31,6 +31,15 @@
     left: 0;
     padding: 4px;
 
+    table {
+      tr {
+        td {
+          height: 28px;
+          width: 28px;
+        }
+      }
+    }
+
     &:before {
       content: '';
       display: inline-block;
