--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -10,8 +10,8 @@
 @import "mixins.less";
 
 // Reset and dependencies
-@import "normalize.less";
-@import "print.less";
+//@import "normalize.less";
+//@import "print.less";
 @import "glyphicons.less";
 
 // Core CSS
