--- a/less/panels.less
+++ b/less/panels.less
@@ -265,6 +265,41 @@
 }
 // Contextual variations
 
+// KU bokstope
+.boxtop {
+  line-height: 1.34;
+  letter-spacing: 0.7px;
+  color: @panel-default-header-text;
+  min-height: 16px;
+  font-weight: 700;
+  padding: @panel-bokstop-heading-padding;
+  border-bottom: 1px solid @ku-red;
+
+  .theme-samf & {
+    border-bottom: 1px solid @samf;
+  }
+
+  .theme-hum & {
+    border-bottom: 1px solid @hum;
+  }
+
+  .theme-science & {
+    border-bottom: 1px solid @science;
+  }
+
+  .theme-sund & {
+    border-bottom: 1px solid @sund;
+  }
+
+  .theme-jur & {
+    border-bottom: 1px solid @jura;
+  }
+
+  .theme-teo & {
+    border-bottom: 1px solid @teol;
+  }
+}
+
 .panel-default {
   & > .panel-heading {
     overflow: hidden;
@@ -272,52 +307,10 @@
     padding-left: 0;
     padding-right: 0;
     & > .panel-title {
-      line-height: 1.34;
-      color: @panel-default-header-text;
-      min-height: 16px;
-      padding: @panel-bokstop-heading-padding;
-      border-bottom: 1px solid @ku-red;
-
-      .theme-samf & {
-        border-bottom: 1px solid @samf;
-      }
-
-      .theme-hum & {
-        border-bottom: 1px solid @hum;
-      }
-
-      .theme-science & {
-        border-bottom: 1px solid @science;
-      }
-
-      .theme-sund & {
-        border-bottom: 1px solid @sund;
-      }
-
-      .theme-jur & {
-        border-bottom: 1px solid @jura;
-      }
-
-      .theme-teo & {
-        border-bottom: 1px solid @teol;
-      }
+      .boxtop;
     }
   }
 }
-// @media (min-width: @screen-xs-max) {
-//   // Remove top border from first box in the right side
-//   .right-side {
-//     [class^="col-"] {
-//       &:first-child {
-//         .panel-default {
-//           > .panel-heading {
-//             border-top: 0;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
 
 .panel-primary {
   .panel-variant(@panel-primary-border; @panel-primary-text; @panel-primary-heading-bg; @panel-primary-border);
