--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -10,7 +10,7 @@
 @import "mixins.less";
 
 // Reset and dependencies
-//@import "normalize.less";
+@import "normalize.less";
 //@import "print.less";
 @import "glyphicons.less";
 
