--- a/less/variables.less
+++ b/less/variables.less
@@ -54,6 +54,8 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
+// KU thumbnaiuls size
+@ku-thumbnails-size:    65px;
 
 //== Scaffolding
 //
