--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -26,17 +26,17 @@
   }
 
   &-dropdown {
+    // Popup
     top: 0;
     left: 0;
     padding: 4px;
-    // table {
-    //   tr {
-    //     td {
-    //       height: 28px;
-    //       width: 28px;
-    //     }
-    //   }
-    // }
+    table {
+      tr {
+        th, td {
+          padding: 4px;
+        }
+      }
+    }
     &:before {
       content: '';
       display: inline-block;
