--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -9,10 +9,14 @@
 }
 
 .media-list {
-  .media-right, .media-left {
+  .media-left,
+  .media-right {
     min-width: @ku-thumbnails-size;
   }
+
   .media {
+    padding-bottom: 15px;
+    border-bottom: 1px solid @gray;
     .media-heading {
       .nyhedsoverskrift;
 
@@ -27,17 +31,19 @@
       .img-thumbnail;
     }
   }
+
   &.smal {
     .media {
-      // If no media-object, move content in
-      & > .media-body {
+      // If no media-object, indent content
+      & > .media-body:first-child {
         padding-left: @ku-thumbnails-size;
       }
     }
   }
 }
-// Nyhedsliste - midterkolonne:
 
+
+// Nyhedsliste - midterkolonne:
 #nyhedsliste {
   &.smal {
     .media {
@@ -52,9 +58,7 @@
     }
   }
 }
-
 // Nyhedsliste - højrekolonne
-
 #nyhedsliste-rightbox {
   .media {
     .news-date2 {
