Updated news and date/time

--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -93,6 +93,12 @@
       border-bottom: 0;
       border-top: 6px solid @dropdown-bg;
     }
+
+    .day {
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   .calStepLink {
