--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -74,7 +74,15 @@
     }
   }
 }
-// Kalender - højre kolonne
+// Arrangementer - midterkolonne:
+
+#calendarlist {
+  .eventdate {
+    margin-bottom: 5px;
+  }
+}
+// Arrangementer - højre kolonne
+
 #minicalendar {
   .panel-body {
     padding: 6px 0 0;
